--- a/TnTComponents/Grid/Infrastructure/TnTDataGridBodyRow.razor.scss
+++ b/TnTComponents/Grid/Infrastructure/TnTDataGridBodyRow.razor.scss
@@ -1,18 +1,17 @@
 ﻿@use '../TnTDataGridVariables.scss' as dg;
 @use '../../Styles/_Variables/_interactable.scss' as interactable;
+@use '../../Styles/_Variables/_colors.scss' as colors;
 
 .tnt-data-grid-body-row {
     @include interactable.tnt-interactable(dg.$tint-color, null);
 
     &.tnt-stripped {
         &:nth-child(even) {
-            background-color: dg.$bg-color;
-            filter: brightness(1.03);
+            background-color: color-mix(in srgb, dg.$bg-color 93%, colors.$tnt-color-background);
         }
 
         &:nth-child(odd) {
-            background-color: dg.$bg-color;
-            filter: brightness(0.97);
+            background-color: color-mix(in srgb, dg.$bg-color 93%, colors.$tnt-color-on-background);
         }
     }
 }
