--- a/TnTComponents/Layout/TnTSideNavLink.razor
+++ b/TnTComponents/Layout/TnTSideNavLink.razor
@@ -11,10 +11,11 @@
    id="@ElementId"
    title="@ElementTitle"
    autofocus="@AutoFocus"
-   @ref="Element">
-   @Icon?.Render()
-        @ChildContent
-        @if (EnableRipple) {
-            <TnTRippleEffect />
-        }
+   @ref="Element"
+   data-permanent>
+    @Icon?.Render()
+    @ChildContent
+    @if (EnableRipple) {
+        <TnTRippleEffect />
+    }
 </a>
