--- a/TnTComponents/Buttons/TnTFabButton.razor.scss
+++ b/TnTComponents/Buttons/TnTFabButton.razor.scss
@@ -13,6 +13,7 @@ $on-tint-color: var(--tnt-button-on-tint-color);
     position: fixed;
     right: 16px;
     bottom: 16px;
+    z-index: 1000;
 
     .tnt-fab-button {
         outline: none;
