Update carousel item styles for improved responsiveness
Changed background width to 80% and replaced width with
max-width and min-width properties. Added border-radius
and overflow properties for enhanced styling.

--- a/TnTComponents/Carousel/TnTCarouselItem.razor.scss
+++ b/TnTComponents/Carousel/TnTCarouselItem.razor.scss
@@ -1,11 +1,14 @@
 ﻿@use '../Styles/_Variables/_colors.scss' as colors;
 
-$bg-width: var(--tnt-carousel-item-bg-width, 256px);
+$bg-width: var(--tnt-carousel-item-bg-width, 80%);
 
 .tnt-carousel-item {
     box-sizing: border-box;
     border: 1px solid colors.$tnt-color-outline;
     background-size: cover;
     height: 100%;
-    width: $bg-width;
+    max-width: $bg-width;
+    min-width: 56px;
+    border-radius: 28px;
+    overflow: clip;
 }
