Enhance carousel UI and improve rendering logic
Updated `Carousel.razor` to include a title, instructions, and structured carousel items with gradient backgrounds and descriptions. Added navigation buttons for scrolling.

Modified `TnTCarousel.razor` to render page scripts conditionally based on item presence, improving efficiency.

Introduced a scroll listener in `TnTCarousel.razor.js` to dynamically adjust item sizes based on visibility.

Adjusted styles in `TnTCarousel.razor.scss` for better height and scrolling behavior, and updated flex properties for consistent layout.

Enhanced `TnTCarouselItem.razor.js` to manage background image width and added a method for width adjustment based on viewport position.

Updated `TnTCarouselItem.razor.scss` to ensure stable item layout with flex properties.

--- a/TnTComponents/Carousel/TnTCarousel.razor.scss
+++ b/TnTComponents/Carousel/TnTCarousel.razor.scss
@@ -5,20 +5,25 @@
     background-color: red;
     display: block;
     box-sizing: border-box;
-    height: 600px;
-    overflow-x: auto;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-
-    &::-webkit-scrollbar {
-        display: none;
-    }
+    height: 528px;
+    width: 100%;
 
     .tnt-carousel-viewport {
         display: flex;
-        flex-direction: row;
+        flex-flow: row nowrap;
+        overflow-x: scroll;
         gap: 8px;
+        //display: block;
         height: 100%;
-        width: max-content;
+        width: 100%;
+        //white-space: nowrap;
+        //overflow-x: auto;
+
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+
+        &::-webkit-scrollbar {
+            display: none;
+        }
     }
 }
