--- a/TnTComponents/Carousel/TnTCarousel.razor
+++ b/TnTComponents/Carousel/TnTCarousel.razor
@@ -8,7 +8,9 @@
 <CascadingValue Value="this" IsFixed="true">
     @ChildContent
 
-    <tnt-carousel @attributes="AdditionalAttributes" class="tnt-carousel" aria-roledescription="carousel">
+    <tnt-carousel @attributes="AdditionalAttributes" class="tnt-carousel" aria-roledescription="carousel" @ref="Element">
+        <TnTImageButton class="tnt-carousel-button tnt-carousel-prev-button" Icon="@MaterialIcon.ChevronLeft" />
+        <TnTImageButton class="tnt-carousel-button tnt-carousel-next-button" Icon="@MaterialIcon.ChevronRight" />
         <div class="tnt-carousel-viewport">
             @foreach (var item in _carouselItems) {
                 @item.RenderItem
@@ -17,6 +19,7 @@
         @if(_items?.Any() == true && _items.First().Value is not null) {
             @_items.First().Value.RenderPageScript
         }
+
     </tnt-carousel>
 </CascadingValue>
 @PageScript
