Enhance Typeahead component functionality and styling
- Updated `Typeahead.razor`:
  - Added `ResultTemplate` for displaying item details (name, email).
  - Introduced binding for `Value` property for better state management.
  - Improved formatting and consistency in `foreach` loop.
  - Added `_value` field for managing input value.

- Modified `TnTTypeahead.razor`:
  - Changed condition for displaying suggestions to use `Value` property.
  - Updated logic for handling no results found.

- Updated `TnTTypeahead.razor.cs`:
  - Added new parameters: `Value`, `ValueChanged`, and `ValueToStringFunc`.
  - Adjusted debounce delay from 500ms to 300ms for improved responsiveness.

- Enhanced `SelectOrShiftFocusAsync` method:
  - Improved handling of `Escape` key to reset input value based on `ResetValueOnEscape`.

- Modified `TnTTypeahead.razor.scss`:
  - Included new typography styles for better visual presentation.
  - Added styles for consistent spacing and elevation effects.

- Overall improvements to functionality, usability, and visual appearance of the typeahead component.

--- a/TnTComponents/Typeahead/TnTTypeahead.razor
+++ b/TnTComponents/Typeahead/TnTTypeahead.razor
@@ -17,7 +17,7 @@
      @ref="@Element">
 
     <span class="tnt-typeahead-box">
-        <TnTInputText @bind-Value="_searchText"
+        <TnTInputText @bind-Value="Value"
                       Appearance="@Appearance"
                       Label="@Label"
                       Placeholder="@Placeholder"
@@ -30,7 +30,7 @@
                       @ref="_inputBox" />
         <TnTProgressIndicator Show="@_searching" ProgressColor="ProgressColor" Size="Size.Small" />
     </span>
-    @if (_items.Any() || (!_items.Any() && !string.IsNullOrWhiteSpace(_searchText) && !_searching)) {
+    @if (_items.Any() || (!_items.Any() && !string.IsNullOrWhiteSpace(Value) && !_searching && !_itemSelected)) {
         <div class="tnt-typeahead-content">
             @if (_items.Any()) {
                 <ul class="tnt-typeahead-list">
@@ -48,7 +48,7 @@
                     }
                 </ul>
             }
-            else if (!_items.Any() && !string.IsNullOrWhiteSpace(_searchText) && !_searching) {
+            else if (!_items.Any() && !string.IsNullOrWhiteSpace(Value) && !_searching && !_itemSelected) {
                 <div class="tnt-typeahead-no-results">
                     No results found
                 </div>
