--- a/LiveTest/LiveTest.Client/Pages/Typeahead.razor
+++ b/LiveTest/LiveTest.Client/Pages/Typeahead.razor
@@ -4,20 +4,30 @@
 
 <h3>Typeahead</h3>
 
-<TnTTypeahead  ItemsLookupFunc="SearchFunc" Label="Typeahead" ItemSelectedCallback="@((Item item) => SelectedItems.Add(item))">
+<TnTTypeahead ItemsLookupFunc="SearchFunc" Label="Typeahead" ItemSelectedCallback="@((Item item) => SelectedItems.Add(item))">
     <ResultTemplate>
         @context.Name @context.Email
     </ResultTemplate>
 </TnTTypeahead>
 
-@foreach(var item in SelectedItems) {
+@foreach (var item in SelectedItems) {
     <span>
         @item.Name @item.Age
     </span>
 }
 
+<br />
+<br />
+<br />
+<br />
+Value: @_value;
+<br />
+<br />
+<br />
+<br />
 
-<TnTTypeahead ItemsLookupFunc="SearchFunc" ItemSelectedCallback="@((Item item) => SelectedItems.Add(item))" />
+
+<TnTTypeahead @bind-Value="_value" ItemsLookupFunc="SearchFunc" ValueToStringFunc="@(item => item.Name)" ResetValueOnSelect="false" ItemSelectedCallback="@((Item item) => SelectedItems.Add(item))" />
 
 @foreach (var item in SelectedItems) {
     <span>
@@ -26,7 +36,7 @@
 }
 
 @code {
-
+    private string? _value;
 
     private IQueryable<Item> Items = new List<Item>().AsQueryable();
 
@@ -44,10 +54,10 @@
         var items = new List<Item>();
         foreach (var index in Enumerable.Range(1, 100)) {
             items.Add(new Item {
-                    Name = $"Name {index}",
-                    Email = $"Email {index}",
-                    Age = index
-                });
+                Name = $"Name {index}",
+                Email = $"Email {index}",
+                Age = index
+            });
         }
 
         Items = items.AsQueryable();
