--- a/TnTComponents/Typeahead/TnTTypeahead.razor.scss
+++ b/TnTComponents/Typeahead/TnTTypeahead.razor.scss
@@ -1,5 +1,6 @@
 ﻿@use '../Styles/_Variables/_colors.scss' as colors;
 @use '../Styles/_Variables/_elevation.scss' as elevation;
+@use '../Styles/_Variables/_typescale.scss' as typescale;
 
 .tnt-typeahead {
     width: calc(100% - 16px);
@@ -40,6 +41,7 @@
         position: absolute;
         background-color: colors.$tnt-color-surface-variant;
         border-radius: 8px;
+        @include typescale.tnt-body-large;
         @include elevation.tnt-elevation(1, false);
 
         ul {
