--- a/TnTComponents/Carousel/TnTCarouselItem.razor.scss
+++ b/TnTComponents/Carousel/TnTCarouselItem.razor.scss
@@ -1,10 +1,11 @@
 ﻿@use '../Styles/_Variables/_colors.scss' as colors;
+@use '../Styles/_Variables/_interactable.scss' as interactable;
 
 $bg-width: var(--tnt-carousel-item-bg-width, 80%);
 
 .tnt-carousel-item {
-    flex-grow:0;
-    flex-shrink:0;
+    flex-grow: 0;
+    flex-shrink: 0;
     box-sizing: border-box;
     background-size: cover;
     border: 1px solid colors.$tnt-color-outline;
@@ -13,15 +14,6 @@ $bg-width: var(--tnt-carousel-item-bg-width, 80%);
     min-width: 56px;
     border-radius: 28px;
     overflow: clip;
-    //margin: 0 4px;
-    //display: inline-block;
-    //user-select: none;
 
-    //&:first-child {
-    //    margin-left: 0;
-    //}
-
-    //&:last-child {
-    //    margin-right: 0;
-    //}
+    @include interactable.tnt-interactable(colors.$tnt-color-surface-tint, null, true);
 }
