Refactor TnTCarousel layout and item rendering
- Restructured `TnTCarousel.razor`:
  - Introduced a new scroll container.
  - Modified the viewport layout.
  - Commented out previous navigation buttons.
  - Adjusted item rendering to include a wrapping `div`.

- Updated `TnTCarousel.razor.js`:
  - Commented out properties related to button functionality.
  - Explicitly set up the carousel's scroll container and viewport.
  - Added calculation for the full size of the carousel.

- Modified `TnTCarouselItem.razor`:
  - Changed item rendering to wrap content in a `div`.

- Enhanced `TnTCarouselItem.razor.js`:
  - Updated constructor for property initialization.
  - Improved logic for calculating natural width.
  - Enhanced item width updating method for better layout handling.

- Updated SCSS files for both components:
  - Introduced a gap size variable for consistent spacing.
  - Adjusted layout properties to accommodate new design.

- Overall improvements to carousel functionality and maintainability.

--- a/TnTComponents/Carousel/TnTCarousel.razor.scss
+++ b/TnTComponents/Carousel/TnTCarousel.razor.scss
@@ -1,32 +1,32 @@
+
+$gapSize: var(--tnt-carousel-item-gap, 8px);
+
 .tnt-carousel {
     position: relative;
     overflow: hidden;
-    padding: 8px 16px;
     display: block;
+    padding: 8px 16px;
     box-sizing: border-box;
     height: 700px;
     width: 100%;
 
-    .tnt-carousel-viewport {
-        display: flex;
-        flex-flow: row nowrap;
-        overflow-x: hidden;
-        gap: 8px;
+    .tnt-carousel-scroll-container {
         height: 100%;
         width: 100%;
-        -ms-overflow-style: none;
-        scrollbar-width: none;
+        overflow-x: auto;
+        overflow-y: hidden;
 
-        &::-webkit-scrollbar {
-            display: none;
-        }
-
-        &:after {
-            display: inline-block;
-            flex-grow: 0;
-            flex-shrink: 0;
-            content: '';
-            width: 100%;
+        .tnt-carousel-viewport {
+            display: flex;
+            flex-flow: row nowrap;
+            gap: var(--tnt-carousel-item-gap);
+            height: 100%;
+            //justify-content: center;
+            //-ms-overflow-style: none;
+            //scrollbar-width: none;
+            //&::-webkit-scrollbar {
+            //    display: none;
+            //}
         }
     }
 
