--- a/TnTComponents/Carousel/TnTCarousel.razor
+++ b/TnTComponents/Carousel/TnTCarousel.razor
@@ -9,14 +9,16 @@
     @ChildContent
 
     <tnt-carousel @attributes="AdditionalAttributes" class="tnt-carousel" aria-roledescription="carousel" @ref="Element">
-        <TnTImageButton class="tnt-carousel-button tnt-carousel-prev-button" Icon="@MaterialIcon.ChevronLeft" />
-        <TnTImageButton class="tnt-carousel-button tnt-carousel-next-button" Icon="@MaterialIcon.ChevronRight" />
-        <div class="tnt-carousel-viewport">
-            @foreach (var item in _carouselItems) {
-                @item.RenderItem
-            }
+        @* <TnTImageButton class="tnt-carousel-button tnt-carousel-prev-button" Icon="@MaterialIcon.ChevronLeft" /> *@
+        @* <TnTImageButton class="tnt-carousel-button tnt-carousel-next-button" Icon="@MaterialIcon.ChevronRight" /> *@
+        <div class="tnt-carousel-scroll-container">
+            <div class="tnt-carousel-viewport">
+                @foreach (var item in _carouselItems) {
+                    @item.RenderItem
+                }
+            </div>
         </div>
-        @if(_items?.Any() == true && _items.First().Value is not null) {
+        @if (_items?.Any() == true && _items.First().Value is not null) {
             @_items.First().Value.RenderPageScript
         }
 
