--- a/TnTComponents/Carousel/TnTCarousel.razor.scss
+++ b/TnTComponents/Carousel/TnTCarousel.razor.scss
@@ -10,23 +10,29 @@ $gapSize: var(--tnt-carousel-item-gap, 8px);
     height: 700px;
     width: 100%;
 
+    &.tnt-carousel-snapping {
+        .tnt-carousel-scroll-container {
+            scroll-snap-type: x mandatory;
+        }
+    }
+
     .tnt-carousel-scroll-container {
         height: 100%;
         width: 100%;
         overflow-x: auto;
         overflow-y: hidden;
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+
+        &::-webkit-scrollbar {
+            display: none;
+        }
 
         .tnt-carousel-viewport {
             display: flex;
             flex-flow: row nowrap;
-            gap: var(--tnt-carousel-item-gap);
+            gap: $gapSize;
             height: 100%;
-            //justify-content: center;
-            //-ms-overflow-style: none;
-            //scrollbar-width: none;
-            //&::-webkit-scrollbar {
-            //    display: none;
-            //}
         }
     }
 
