--- a/TnTComponents/Carousel/TnTCarousel.razor.scss
+++ b/TnTComponents/Carousel/TnTCarousel.razor.scss
@@ -1,4 +1,3 @@
-
 $gapSize: var(--tnt-carousel-item-gap, 8px);
 
 .tnt-carousel {
@@ -11,8 +10,9 @@ $gapSize: var(--tnt-carousel-item-gap, 8px);
     width: 100%;
 
     &.tnt-carousel-snapping {
-        .tnt-carousel-viewport {
+        .tnt-carousel-viewport:not(.tnt-carousel-dragging) {
             scroll-snap-type: x mandatory;
+            scroll-behavior: smooth;
 
             ::deep tnt-carousel-item {
                 scroll-snap-align: start;
@@ -31,6 +31,12 @@ $gapSize: var(--tnt-carousel-item-gap, 8px);
         border-radius: 28px;
         -ms-overflow-style: none;
         scrollbar-width: none;
+        cursor: grab;
+        user-select: none;
+
+        &.tnt-carousel-dragging {
+            cursor: grabbing;
+        }
 
         &::-webkit-scrollbar {
             display: none;
